2002-11-27  Frederic De Jaeger <dejaeger@free.fr>

	* configure.ac: add the flag --disable-glx.
	* configure: regenerated

2002-11-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XIMInputServer.m
	In [lookupStringForEvent:window:keysym:] autorelease the string,
	so it gets freed late on.
	
2002-11-21  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.3

	* Source/gsc/GSStreamContext.m (-GSSendBezierPath:): Add back and 
	implement.

	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:] (ClientMessage:TAKE_FOCUS)):
	minor correction.

2002-11-21  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m
	Implemented [GSSendBezierPath:].
	* Source/gsc/GSStreamContext.m
	Removed (empty) implementation of [GSSendBezierPath:].
	* Source/x11/XGServer.m
	Added #ifdef around include of XGOpenGL.h.

2002-11-16  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGGLContext.m (-initWithFormat:shareContext:): Remove
	assert.

	* Source/x11/XGServerWindow.m ([XGServer -setinputstate::]): Return
	if window is NULL.

2002-11-16  Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/x11/XGOpenGL.h: Added define to avoid collision of
	parameters named "id" in some versions of the OpenGL headers
	with the Objective-C type "id".   This was causing build of
	back to fail.

2002-11-15  Frederic De Jaeger <dejaeger@free.fr>

	* Source/x11/XGGLFormat.m, Source/x11/XGGLContext.m
	  Headers/x11/XGOpenGL.h: New files.
	* Source/x11/Makefile: Updated.
	* configure.ac: add a test for GLX
	* Source/x11/XGServer.m (glContextClass,
          glPixelFormatClass): Implement.

2002-11-08  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:] (ClientMessage:TAKE_FOCUS)):
	Reassert focus and/or send FocusIn event in all cases.

2002-10-29  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer -_checkWindowManager]):
	Make sure not to dereference possible NULL pointer.

2002-10-28  Adam Fedor  <fedor@gnu.org>
