@@ -30,8 +30,10 @@
 #include <AppKit/NSOpenGL.h>
 
 #define id _gs_avoid_id_collision
+#define BOOL _gs_avoid_BOOL_collision
 #include <GL/glx.h>
 #undef id
+#undef BOOL
 
 @class NSView;
 @class XGXSubWindow;
